(env
 (_
  (c_flags :standard -std=gnu14 -g0)
  (cxx_flags :standard -std=gnu++14 -g0)))

(subdir
 unisim/util
 (include_subdirs unqualified)
 (library
  (package unisim_archisec)
  (name util)
  (foreign_stubs
   (language cxx)
   (names :standard)
   (flags :standard -I../..)
   (extra_deps
    floating_point/floating_point.hh
    symbolic/symbolic.hh
    arithmetic/arithmetic.hh
    inlining/inlining.hh
    arithmetic/integer.hh
    identifier/identifier.hh
    endian/endian.hh
    symbolic/binsec/binsec.hh
    symbolic/symbolic.hh
    arithmetic/arithmetic.hh
    inlining/inlining.hh
    arithmetic/integer.hh
    identifier/identifier.hh
    symbolic/vector/vector.hh
    symbolic/vector/vector.hh
    symbolic/symbolic.hh
    arithmetic/arithmetic.hh
    inlining/inlining.hh
    arithmetic/integer.hh
    identifier/identifier.hh))))

(subdir
 unisim/component/cxx/processor/arm/isa
 (foreign_library
  (archive_name arm)
  (language cxx)
  (names
   (:standard \ simfloat))
  (flags
   (:standard -I../../../../../..))
  (extra_deps
   arm64/disasm.hh
   arm64/decode.hh
   decode.hh
   disasm.hh
   ../../../../../util/identifier/identifier.hh
   constants.hh
   ../../../../../util/arithmetic/bitfield.hh)))

(subdir
 aarch32
 (foreign_library
  (archive_name aarch32)
  (language cxx)
  (names (:standard))
  (flags :standard -I. -I..)
  (extra_deps
   decoder.hh
   ../unisim/component/cxx/processor/arm/isa/disasm.hh
   ../unisim/util/identifier/identifier.hh
   ../unisim/component/cxx/processor/arm/isa/constants.hh
   ../unisim/util/arithmetic/bitfield.hh
   ../unisim/util/symbolic/binsec/binsec.hh
   ../unisim/util/symbolic/symbolic.hh
   ../unisim/util/arithmetic/arithmetic.hh
   ../unisim/util/inlining/inlining.hh
   ../unisim/util/arithmetic/integer.hh
   top_arm32.tcc
   top_arm32.hh
   ../unisim/component/cxx/processor/arm/isa/decode.hh
   ../unisim/component/cxx/processor/arm/isa/models.hh
   ../unisim/util/likely/likely.hh
   ../unisim/util/endian/endian.hh
   ../unisim/component/cxx/processor/arm/isa/execute.hh
   ../unisim/util/truth_table/truth_table.hh
   top_thumb.tcc
   top_thumb.hh)))

(library
 (public_name unisim_archisec.arm32dba)
 (name arm32dba)
 (modules arm32dba)
 (foreign_archives
  aarch32/aarch32
  unisim/component/cxx/processor/arm/isa/arm)
 (foreign_stubs
  (language cxx)
  (names arm32dba)
  (flags :standard -I.))
 (libraries util))

(subdir
 unisim/component/cxx/processor/arm/isa/arm64
 (foreign_library
  (archive_name arm64)
  (language cxx)
  (names (:standard))
  (flags :standard -I../../../../../../..)
  (extra_deps disasm.hh decode.hh ../decode.hh)))

(subdir
 aarch64
 (foreign_library
  (archive_name aarch64)
  (language cxx)
  (names (:standard))
  (flags :standard -I. -I..)
  (extra_deps
   decoder.hh
   ../unisim/component/cxx/processor/arm/regs64/cpu.hh
   ../unisim/component/cxx/vector/vector.hh
   ../unisim/util/symbolic/binsec/binsec.hh
   ../unisim/util/symbolic/symbolic.hh
   ../unisim/util/arithmetic/arithmetic.hh
   ../unisim/util/inlining/inlining.hh
   ../unisim/util/arithmetic/integer.hh
   ../unisim/util/identifier/identifier.hh
   ../unisim/util/symbolic/vector/vector.hh
   ../unisim/util/floating_point/floating_point.hh
   aarch64dec.tcc
   aarch64dec.hh
   ../unisim/component/cxx/processor/arm/isa/arm64/decode.hh
   ../unisim/component/cxx/processor/arm/isa/decode.hh
   ../unisim/component/cxx/processor/arm/isa/arm64/disasm.hh
   ../unisim/component/cxx/processor/arm/isa/arm64/execute.hh
   ../unisim/component/cxx/processor/arm/isa/constants.hh
   ../unisim/util/arithmetic/bitfield.hh
   ../unisim/component/cxx/processor/arm/isa/execute.hh
   ../unisim/util/truth_table/truth_table.hh)))

(library
 (public_name unisim_archisec.aarch64dba)
 (name aarch64dba)
 (modules aarch64dba)
 (foreign_archives
  aarch64/aarch64
  unisim/component/cxx/processor/arm/isa/arm64/arm64)
 (foreign_stubs
  (language cxx)
  (names aarch64dba)
  (flags :standard -I.))
 (libraries util))

(subdir
 unisim/component/cxx/processor/powerpc/isa
 (foreign_library
  (archive_name ppc)
  (language cxx)
  (names (:standard))
  (flags
   (:standard -I../../../../../..))
  (extra_deps disasm.hh)))

(subdir
 ppc64
 (foreign_library
  (archive_name ppc64)
  (language cxx)
  (names (:standard))
  (flags :standard -I. -I..)
  (extra_deps
   ppc64dec.hh
   arch.hh
   types.hh
   ../unisim/util/symbolic/binsec/binsec.hh
   ../unisim/util/symbolic/symbolic.hh
   ../unisim/util/arithmetic/arithmetic.hh
   ../unisim/util/inlining/inlining.hh
   ../unisim/util/arithmetic/integer.hh
   ../unisim/util/identifier/identifier.hh
   ../unisim/component/cxx/processor/powerpc/isa/disasm.hh
   ../unisim/component/cxx/processor/powerpc/isa/book_i/fixed_point/integer.hh
   ../unisim/util/likely/likely.hh
   arch.hh
   types.hh
   ../unisim/util/symbolic/binsec/binsec.hh
   ../unisim/util/symbolic/symbolic.hh
   ../unisim/util/arithmetic/arithmetic.hh
   ../unisim/util/inlining/inlining.hh
   ../unisim/util/arithmetic/integer.hh
   ../unisim/util/identifier/identifier.hh
   decoder.hh
   arch.hh
   types.hh
   ../unisim/util/symbolic/binsec/binsec.hh
   ../unisim/util/symbolic/symbolic.hh
   ../unisim/util/arithmetic/arithmetic.hh
   ../unisim/util/inlining/inlining.hh
   ../unisim/util/arithmetic/integer.hh
   ../unisim/util/identifier/identifier.hh
   ppc64dec.hh)))

(library
 (public_name unisim_archisec.ppc64dba)
 (name ppc64dba)
 (modules ppc64dba)
 (foreign_archives
  ppc64/ppc64
  unisim/component/cxx/processor/powerpc/isa/ppc)
 (foreign_stubs
  (language cxx)
  (names ppc64dba)
  (flags :standard -I.))
 (libraries util))

(subdir
 unisim/component/cxx/processor/intel
 (include_subdirs unqualified)
 (foreign_library
  (archive_name intel)
  (language cxx)
  (names (:standard))
  (flags :standard -I../../../../..)
  (extra_deps
   disasm.hh
   segments.hh
   tmp.hh
   types.hh
   ../../../../util/identifier/identifier.hh
   modrm.hh
   math.hh
   types.hh
   ../../../../util/identifier/identifier.hh)))

(subdir
 amd64
 (foreign_library
  (archive_name amd64)
  (language cxx)
  (names (:standard))
  (flags :standard -I. -I..)
  (extra_deps
   arch.hh
   ../unisim/component/cxx/processor/intel/isa/intel.hh
   ../unisim/component/cxx/processor/intel/modrm.hh
   ../unisim/component/cxx/processor/intel/types.hh
   ../unisim/util/identifier/identifier.hh
   ../unisim/component/cxx/processor/intel/segments.hh
   ../unisim/component/cxx/processor/intel/disasm.hh
   ../unisim/component/cxx/processor/intel/tmp.hh
   ../unisim/component/cxx/processor/intel/vectorbank.hh
   ../unisim/component/cxx/vector/vector.hh
   ../unisim/util/symbolic/vector/vector.hh
   ../unisim/util/symbolic/symbolic.hh
   ../unisim/util/arithmetic/arithmetic.hh
   ../unisim/util/inlining/inlining.hh
   ../unisim/util/arithmetic/integer.hh
   ../unisim/util/symbolic/binsec/binsec.hh
   ../unisim/component/cxx/processor/intel/isa/intel.tcc
   ../unisim/component/cxx/processor/intel/execute.hh
   ../unisim/component/cxx/processor/intel/math.hh
   ../unisim/component/cxx/processor/intel/isa/branch.hh
   ../unisim/component/cxx/processor/intel/isa/integer.hh
   ../unisim/component/cxx/processor/intel/isa/floatingpoint.hh
   ../unisim/component/cxx/processor/intel/isa/move.hh
   ../unisim/component/cxx/processor/intel/isa/string.hh
   ../unisim/component/cxx/processor/intel/isa/special.hh
   ../unisim/component/cxx/processor/intel/isa/simd.hh
   arch.hh
   ../unisim/component/cxx/processor/intel/isa/intel.hh
   ../unisim/component/cxx/processor/intel/modrm.hh
   ../unisim/component/cxx/processor/intel/types.hh
   ../unisim/util/identifier/identifier.hh
   ../unisim/component/cxx/processor/intel/segments.hh
   ../unisim/component/cxx/processor/intel/disasm.hh
   ../unisim/component/cxx/processor/intel/tmp.hh
   ../unisim/component/cxx/processor/intel/vectorbank.hh
   ../unisim/component/cxx/vector/vector.hh
   ../unisim/util/symbolic/vector/vector.hh
   ../unisim/util/symbolic/symbolic.hh
   ../unisim/util/arithmetic/arithmetic.hh
   ../unisim/util/inlining/inlining.hh
   ../unisim/util/arithmetic/integer.hh
   ../unisim/util/symbolic/binsec/binsec.hh
   decoder.hh
   arch.hh
   ../unisim/component/cxx/processor/intel/isa/intel.hh
   ../unisim/component/cxx/processor/intel/modrm.hh
   ../unisim/component/cxx/processor/intel/types.hh
   ../unisim/util/identifier/identifier.hh
   ../unisim/component/cxx/processor/intel/segments.hh
   ../unisim/component/cxx/processor/intel/disasm.hh
   ../unisim/component/cxx/processor/intel/tmp.hh
   ../unisim/component/cxx/processor/intel/vectorbank.hh
   ../unisim/component/cxx/vector/vector.hh
   ../unisim/util/symbolic/vector/vector.hh
   ../unisim/util/symbolic/symbolic.hh
   ../unisim/util/arithmetic/arithmetic.hh
   ../unisim/util/inlining/inlining.hh
   ../unisim/util/arithmetic/integer.hh
   ../unisim/util/symbolic/binsec/binsec.hh)))

(library
 (public_name unisim_archisec.amd64dba)
 (name amd64dba)
 (modules amd64dba)
 (foreign_archives amd64/amd64 unisim/component/cxx/processor/intel/intel)
 (foreign_stubs
  (language cxx)
  (names amd64dba)
  (flags :standard -I.))
 (libraries util))

(test
 (name unittest)
 (modes
  (best exe))
 (modules unittest)
 (libraries arm32dba aarch64dba ppc64dba amd64dba))
